2006-05-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	  Removed profile and pydoc options.
	  Removed psyco.
	  Removed paths module configuration.

	* lib/gaupol/gtk/paths.py:
	  Use relative paths by default.

	* tools/profile:
	* tools/pydoc:
	  New files.

2006-05-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/add-changelog:
	* tools/status:
	  New files.

2006-05-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/py.test:
	* tools/pyenchant:
	* tools/pylint:
	* tools/versions:
	  Minor fixes.

2006-05-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/versions:
	  Renamed from tools/info.

	* tools/run:
	  Removed.

2006-05-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools:
	  Renamed test directory to tools.

2006-05-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/util/relib.py:
	* lib/gaupol/base/util/test:
	* lib/gaupol/base/util/test/test_relib.py:
	  Moved testing under test directory.

	* test/py.test:
	  New file.

	* test/pylint:
	  Fixed argument passing.

2006-05-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	  Removed --execute option.

	* test/pylint:
	  Added docstring.

	* test/run:
	  New file for running tests.

2006-05-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol:
	  Removed PyChecker option.

	* lib/gaupol/base/text/parser.py:
	  Removed an unused local variable.

	* lib/gaupol/base/util/relib.py:
	  (NONE): New attribute.

	* test/pylint:
	  New file.

2006-05-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/find-dialog.glade:
	* lib/gaupol/gtk/delegates/find.py:
	* lib/gaupol/gtk/dialogs/find.py:
	  New files for search functionality.

	* data/glade/replace-dialog.glade:
	  Redesigned, but still outdated.

	* data/ui/menubar.xml:
	* data/ui/toolbar.xml:
	  Added find and replace items.

	* lib/gaupol/base/delegates/find.py:
	* lib/gaupol/base/text/finder.py:
	  Lots of fixes based on testing.

	* lib/gaupol/gtk/application.py:
	  New methods for page handling.

	* lib/gaupol/gtk/delegates/__init__.py: